# monsterapi

./: .gitignore  Cargo.toml  README.md  Rocket.toml  config.toml
migrations/2022-03-13-113010_create_categories_and_products/: down.sql  up.sql
src/: lib.rs
src/api/: app.rs  mod.rs  views.rs
src/database/: access_layer.rs  mod.rs  models.rs  schema.rs
src/scraper/: mod.rs  scraper.rs  types.rs
src/scraping/: scraper.rs
