[package]
name = "monsterapi"
version = "0.1.0"
edition = "2021"
default-run = "scraper"

[dependencies]
scraper = "0.12.0"
headless_chrome = { git = "https://github.com/atroche/rust-headless-chrome.git", features = ["fetch"] }
serde_json = "1.0.79"
url = "2.2.2"
rand = "0.8.5"
diesel = { version = "1.4.8", features = ["sqlite"] }
diesel_migrations = "1.4.0"
config = "0.12.0"
