[package]
name = "monsterapi"
version = "0.1.0"
edition = "2021"
default-run = "api"

[dependencies]
scraper = "0.12.0"
headless_chrome = { git = "https://github.com/atroche/rust-headless-chrome.git", features = ["fetch"] }
serde_json = "1.0.79"
url = "2.2.2"
rand = "0.8.5"
diesel = { version = "1.4.8", features = ["sqlite"] }
diesel_migrations = "1.4.0"
config = "0.12.0"
rocket = "0.4.10"
rocket_contrib = { version = "0.4.10", default-features = false, features=["json", "diesel_sqlite_pool"] }
serde = "1.0.136"
